--- a/stock/init.target.rc
+++ b/stock/init.target.rc
@@ -162,9 +162,9 @@ service qseecomd /system/bin/qseecomd
    user root
    group root
 
-service mpdecision /system/bin/mpdecision --avg_comp
-   user root
-   disabled
+#service mpdecision /system/bin/mpdecision --avg_comp
+#   user root
+#   disabled
 
 service qosmgrd /system/bin/qosmgr /system/etc/qosmgr_rules.xml
    user system
